--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "clean": "rm dist/bundle.js",
     "dev": "webpack-dev-server --open --mode development",
-    "build": "webpack -p --mode production"
+    "build": "webpack -p --mode production",
+    "lint": "eslint --ext .js --ext .vue src/",
+    "lint:fix": "eslint --fix --ext .js --ext .vue src/"
   },
   "dependencies": {
     "lodash": "^4.17.15",
@@ -22,7 +24,10 @@
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-vue": "^6.1.2",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
@@ -30,6 +35,7 @@
     "node-sass": "^4.13.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.1",
+    "url-loader": "^3.0.0",
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.5",
