ci: eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "es6": true,
-    "browser": true
+    "commonjs": true,
+    "node": true
   },
   "parserOptions": {
     "ecmaVersion": 2018,
