--- a/package.json
+++ b/package.json
@@ -19,7 +19,19 @@
     "lint": "eslint --ext .js --ext .vue src/",
     "lint:fix": "eslint --fix --ext .js --ext .vue src/",
     "analyz": "webpack-bundle-analyzer --port 8888 ./dist/stats.json",
-    "build:analyz": "npm run build && npm run analyz "
+    "build:analyz": "npm run build && npm run analyz ",
+    "prettier": "prettier --write \"./src/*.{js,jsx,vue,css,html,scss,md,json}\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,vue,css,html,scss,md,json}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "lodash": "^4.17.15",
@@ -43,6 +55,7 @@
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
+    "husky": "^4.0.10",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
