--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
     "husky": "^4.0.10",
+    "lint-staged": "^9.5.0",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
