--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.1.2",
     "file-loader": "^5.0.2",
+    "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
     "husky": "^4.0.10",
