--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     }
   },
   "lint-staged": {
-    "**/*.{js,jsx,vue,css,html,scss,md,json}": [
+    "*.{js,jsx,vue,css,html,scss,md,json}": [
       "prettier --write",
       "git add"
     ]
@@ -60,9 +60,9 @@
     "lint-staged": "^9.5.0",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
+    "sass": "^1.37.0",
     "sass-loader": "^8.0.1",
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.11",
