--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rainbow-vue-cli",
+  "name": "vue-boilerplate",
   "version": "1.0.0",
-  "description": "",
+  "description": "Vue 2.6.14 boilerplate with vue-router, vuex & webpack 4.",
   "main": "index.js",
   "keywords": [
     "vue",
@@ -35,23 +35,23 @@
   },
   "dependencies": {
     "lodash": "^4.17.15",
-    "vue": "^2.6.11"
+    "vue": "^2.6.14",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.9",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "autoprefixer": "^9.7.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.2.2",
     "cross-env": "^6.0.3",
     "css-loader": "^3.4.2",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-vue": "^6.1.2",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-vue": "^7.15.0",
     "file-loader": "^5.0.2",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -61,11 +61,12 @@
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.3.2",
     "sass": "^1.37.0",
     "sass-loader": "^8.0.1",
-    "vue-loader": "^15.8.3",
-    "vue-template-compiler": "^2.6.11",
+    "vue-loader": "^15.9.7",
+    "vue-router": "^3.0.2",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "^4.41.5",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
